resolved the white space problem

--- a/src/app/AuthWrapper.module.css
+++ b/src/app/AuthWrapper.module.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   box-sizing: border-box;
   background-color: #f5f5f5; /* Light grey background */
 }
